--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "next": "15.1.3",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-vertical-timeline-component": "^3.5.3"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-vertical-timeline-component": "^3.3.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
