--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-vertical-timeline-component": "^3.5.3"
   },
